fix: display text for login on smaller screen

--- a/src/pages/styles/auth.scss
+++ b/src/pages/styles/auth.scss
@@ -66,7 +66,9 @@
         font-weight: 600;
         color: $primary-blue;
         font-size: 18px;
+        display: block
      }
+
  }
    }
  }
